Release 0.2.2
